--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-  <load="partials/header.html"/>
+  <load vscode-format-ignore="partials/header.html" />
+  <load vscode-format-ignore="partials/hero.html" />
 
-  <!-- Loads the specified .html file -->
-  <!-- <load ="partials/vite-promo.html" /> -->
+
+
+
 
   <script type="module" src="/main.js"></script>
 </body>
