start add about

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
   <load vscode-format-ignore="partials/header.html" />
   <load vscode-format-ignore="partials/hero.html" />
-
+  <load vscode-format-ignore="partials/about.html" />
 
 
 
